--- a/pages/popup.html
+++ b/pages/popup.html
@@ -13,8 +13,16 @@
 			</div>
 			<div class="panel-body">
 				<div class="form-group">
-					<label for="keyword">Please enter keyword</label>
-					<input type="text" name="keyword" id="keyword" class="form-control" placeholder="Enter keyword like chiropractor" value="chiropractor" />
+					<label for="count">Count of orders exported to a csv file.</label>
+					<select class="form-control" name="count" id="count">
+						<option value="100">100</option>
+						<option value="500">500</option>
+						<option value="1000">1,000</option>
+						<option value="2000">2,000</option>
+						<option value="5000">5,000</option>
+						<option value="10000">10,000</option>
+						<option value="20000">20,000</option>
+					</select>
 				</div>
 			</div>
 			<div class="panel-footer">
