multiple language issue fixed

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -39,9 +39,9 @@
 				<center><h3>Amazon Orders.</h3></center>
 			</div>
 			<div class="panel-body">
-				<h4>Wait for it!<span class="alert alert-danger" id="in-progress-alert">Collecting orders in progress...</span></h4>
+				<h4>Wait for it!</h4>
 				<div class="form-group">
-					<p>Getting leads in <span class="alert alert-info" id="cur-city">Some places</span>...</p>
+					<p>Collecting orders in progress...</p>
 				</div>
 			</div>
 			<div class="panel-footer">
